Add error_details to image_events

--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -228,6 +228,11 @@
           "nullable": true
         },
         {
+          "name": "error_details",
+          "type": "string",
+          "nullable": true
+        },
+        {
           "name": "display_id",
           "type": "string",
           "nullable": true
