--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -293,6 +293,38 @@
     },
     {
       "projectId": "client-side-events",
+      "dataset": "Widget_Events",
+      "tableNamePrefix": "image_memory_usage",
+      "fields": [
+        {
+          "name": "display_id",
+          "type": "string",
+          "nullable": false
+        },
+        {
+          "name": "js_heap_size_limit",
+          "type": "INTEGER",
+          "nullable": false
+        },
+        {
+          "name": "total_js_heap_size",
+          "type": "INTEGER",
+          "nullable": false
+        },
+        {
+          "name": "used_js_heap_size",
+          "type": "INTEGER",
+          "nullable": false
+        },
+        {
+          "name": "ts",
+          "type": "TIMESTAMP",
+          "nullable": false
+        }
+      ]
+    },
+    {
+      "projectId": "client-side-events",
       "dataset": "Apps_Events",
       "tableNamePrefix": "events",
       "fields": [
