--- a/src/main/resources/job-scheduler-config.json
+++ b/src/main/resources/job-scheduler-config.json
@@ -4,7 +4,7 @@
   {
     "query":
     {
-      "createDisposition": "WRITE_TRUNCATE",
+      "writeDisposition": "WRITE_TRUNCATE",
       "destinationTable":
       {
         "projectId": "client-side-events",
