--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,12 +2,12 @@
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
   <servlet>
     <servlet-name>insertJobs</servlet-name>
-    <servlet-class>tejohnso.bigquery.InsertJobsHandler</servlet-class>
+    <servlet-class>com.risevision.bigquery.InsertJobsHandler</servlet-class>
   </servlet>
 
   <servlet>
     <servlet-name>insertTables</servlet-name>
-    <servlet-class>tejohnso.bigquery.InsertTablesHandler</servlet-class>
+    <servlet-class>com.risevision.bigquery.InsertTablesHandler</servlet-class>
   </servlet>
 
   <servlet-mapping>
