--- a/src/main/resources/job-scheduler-config.json
+++ b/src/main/resources/job-scheduler-config.json
@@ -1,35 +1,28 @@
 {
   "projectId": "client-side-events",
-  "configuration":
-  {
-    "query":
-    {
+  "configuration": {
+    "query": {
       "writeDisposition": "WRITE_TRUNCATE",
-      "destinationTable":
-      {
+      "destinationTable": {
         "projectId": "client-side-events",
         "datasetId": "Aggregate_Tables"
       }
     }
   },
-
   "every4Hours": [
     {
       "destinationTableId": "UpgradeStats",
       "fileName": "queries/upgrade-stats.sql"
     },
-
     {
       "destinationTableId": "NewInstallationStats",
       "fileName": "queries/new-installation-stats.sql"
     }
   ],
-
   "every24Hours": [
     {
       "destinationTableId": "DisplayCountByInstallerType",
       "fileName": "queries/display-count-by-installer-type.sql"
     }
   ]
-
 }
