Add Player Reliabiility Stats as 24-hour job

--- a/src/main/resources/job-scheduler-config.json
+++ b/src/main/resources/job-scheduler-config.json
@@ -39,6 +39,10 @@
     {
       "destinationTableId": "DisplayCountByInstallerType",
       "fileName": "queries/display-count-by-installer-type.sql"
+    },
+    {
+      "destinationTableId": "PlayerReliabilityStats",
+      "fileName": "queries/player-reliability-stats.sql"
     }
   ]
 }
