Add display costs as a daily query

--- a/src/main/resources/job-scheduler-config.json
+++ b/src/main/resources/job-scheduler-config.json
@@ -43,6 +43,10 @@
     {
       "destinationTableId": "PlayerReliabilityStats",
       "fileName": "queries/player-reliability-stats.sql"
+    },
+    {
+      "destinationTableId": "DisplayCosts",
+      "fileName": "queries/display-costs.sql"
     }
   ]
 }
