Add MultipleUnreliableV3StartsPlayerCount (#18)

--- a/src/main/resources/job-scheduler-config.json
+++ b/src/main/resources/job-scheduler-config.json
@@ -33,6 +33,10 @@
     {
       "destinationTableId": "RiseCacheUsage",
       "fileName": "queries/rise-cache-usage.sql"
+    },
+    {
+      "destinationTableId": "MultipleUnreliableV3StartsPlayerCount",
+      "fileName": "multiple-unreliable-v3-starts-player-count.sql"
     }
   ],
   "every24Hours": [
