Add viewer crash queries

--- a/src/main/resources/job-scheduler-config.json
+++ b/src/main/resources/job-scheduler-config.json
@@ -29,6 +29,10 @@
     {
       "destinationTableId": "ViewerExceptionDetails",
       "fileName": "queries/viewer-exception-details.sql"
+    },
+    {
+      "destinationTableId": "ViewerCrashDisplayCount",
+      "fileName": "queries/viewer-display-crash.sql"
     }
   ],
   "every24Hours": [
