Add Video daily reliability query to aggregate tables

--- a/src/main/resources/job-scheduler-config.json
+++ b/src/main/resources/job-scheduler-config.json
@@ -61,6 +61,10 @@
       "fileName": "queries/rss-widget-usage-by-month.sql"
     },
     {
+      "destinationTableId": "VideoDailyReliability",
+      "fileName": "queries/video-daily-reliability.sql"
+    },
+    {
       "destinationTableId": "ViewerExceptionSummary",
       "fileName": "queries/viewer-exception-summary.sql"
     },
