Added aggregation of ticker daily reliability

--- a/src/main/resources/job-scheduler-config.json
+++ b/src/main/resources/job-scheduler-config.json
@@ -85,6 +85,10 @@
       "fileName": "queries/cache-v2-daily-reliability.sql"
     },
     {
+      "destinationTableId": "TickerDailyReliability",
+      "fileName": "queries/ticker-daily-reliability.sql"
+    },
+    {
       "destinationTableId": "ViewerExceptionSummary",
       "fileName": "queries/viewer-exception-summary.sql"
     },
