--- a/src/main/resources/job-scheduler-config.json
+++ b/src/main/resources/job-scheduler-config.json
@@ -99,6 +99,10 @@
     {
       "destinationTableId": "ViewerCrashDisplayCount",
       "fileName": "queries/viewer-display-crash.sql"
+    },
+    {
+      "destinationTableId": "DisplayNetworkReliability",
+      "fileName": "queries/display-network-reliability.sql"
     }
   ]
 }
