Added aggregation of viewer offline daily reliability

--- a/src/main/resources/job-scheduler-config.json
+++ b/src/main/resources/job-scheduler-config.json
@@ -101,6 +101,10 @@
       "fileName": "queries/viewer-display-crash.sql"
     },
     {
+    "destinationTableId": "ViewerOfflineReliability",
+    "fileName": "queries/viewer-offline-reliability.sql"
+    },
+    {
       "destinationTableId": "DisplayNetworkReliability",
       "fileName": "queries/display-network-reliability.sql"
     }
