Added Display Info query to be aggregated

--- a/src/main/resources/job-scheduler-config.json
+++ b/src/main/resources/job-scheduler-config.json
@@ -29,6 +29,10 @@
       "fileName": "queries/display-count-by-installer-type.sql"
     },
     {
+      "destinationTableId": "DisplayInfo",
+      "fileName": "queries/display-info.sql"
+    },
+    {
       "destinationTableId": "PlayerCountColumnsByOSCategory",
       "fileName": "queries/player-count-columns-by-os-category.sql"
     },
