Add module upgrade stats query to be aggregated

--- a/src/main/resources/job-scheduler-config.json
+++ b/src/main/resources/job-scheduler-config.json
@@ -15,6 +15,10 @@
       "fileName": "queries/upgrade-stats.sql"
     },
     {
+      "destinationTableId": "ModuleUpgradeStats",
+      "fileName": "queries/module-upgrade-stats.sql"
+    },
+    {
       "destinationTableId": "NewInstallationStats",
       "fileName": "queries/new-installation-stats.sql"
     },
