add player module stats query to be aggregated

--- a/src/main/resources/job-scheduler-config.json
+++ b/src/main/resources/job-scheduler-config.json
@@ -23,6 +23,10 @@
       "fileName": "queries/new-installation-stats.sql"
     },
     {
+      "destinationTableId": "PlayerModuleStats",
+      "fileName": "queries/player-module-stats.sql"
+    },
+    {
       "destinationTableId": "MultipleUnreliableV3StartsPlayerCount",
       "fileName": "queries/multiple-unreliable-v3-starts-player-count.sql"
     }
