--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,13 @@
 
   <properties>
     <app.id>bigquery-table-generator</app.id>
-    <appengine.sdk.version>1.9.25</appengine.sdk.version>
+    <appengine.sdk.version>1.9.63</appengine.sdk.version>
+    <maven.compiler.source>1.8</maven.compiler.source>
+	<maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
+  
   <prerequisites>
     <maven>3.1.0</maven>
   </prerequisites>
@@ -32,7 +35,7 @@
     <dependency>
       <groupId>com.google.apis</groupId>
       <artifactId>google-api-services-bigquery</artifactId>
-      <version>v2-rev227-1.20.0</version>
+      <version>v2-rev377-1.23.0</version>
     </dependency>
     <dependency>
       <groupId>com.google.api-client</groupId>
@@ -42,7 +45,7 @@
     <dependency>
       <groupId>com.google.api-client</groupId>
       <artifactId>google-api-client-jackson2</artifactId>
-      <version>1.20.0</version>
+      <version>1.23.0</version>
     </dependency>
     <dependency>
       <groupId>com.google.appengine</groupId>
@@ -74,7 +77,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>versions-maven-plugin</artifactId>
-        <version>2.2</version>
+        <version>2.5</version>
         <executions>
           <execution>
             <phase>package</phase>
@@ -86,23 +89,24 @@
         </executions>
       </plugin>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <version>3.3</version>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
-          <compilerArgs>
-            <arg>-Xlint</arg>
-          </compilerArgs>
-          <fork>true</fork>
-          <showWarnings>true</showWarnings>
-        </configuration>
-      </plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<version>3.7.0</version>
+		<artifactId>maven-compiler-plugin</artifactId>
+		<configuration>
+			<source>1.8</source>
+			<target>1.8</target>
+			<fork>true</fork>
+			<compilerArguments>
+				<Xmaxerrs>5</Xmaxerrs>
+			</compilerArguments>
+          	<fork>true</fork>
+          	<showWarnings>true</showWarnings>
+		</configuration>
+	  </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.18.1</version>
+        <version>2.20.1</version>
         <configuration>
           <argLine>-XX:MaxJavaStackTraceDepth=10</argLine>
         </configuration>
@@ -120,29 +124,16 @@
           </execution>
         </executions>
       </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>2.6</version>
-        <configuration>
-          <archiveClasses>true</archiveClasses>
-          <webResources>
-            <resource>
-              <directory>${basedir}/src/main/webapp/WEB-INF</directory>
-              <filtering>true</filtering>
-              <targetPath>WEB-INF</targetPath>
-            </resource>
-          </webResources>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>com.google.appengine</groupId>
-        <artifactId>appengine-maven-plugin</artifactId>
-        <version>${appengine.sdk.version}</version>
-        <configuration>
-          <version>${deploy.version}</version>
-        </configuration>
-      </plugin>
+	  <plugin>
+		<groupId>com.google.cloud.tools</groupId>
+		<artifactId>appengine-maven-plugin</artifactId>
+		<version>1.3.2</version>
+		<configuration>
+			<!-- deploy configuration -->
+			<enableJarClasses>false</enableJarClasses>
+			<port>8888</port>
+		</configuration>
+	  </plugin>
     </plugins>
   </build>
 </project>
