Using standardSQL on twitter reliability query. Added unlicensed usage table.

--- a/src/main/resources/job-scheduler-config.json
+++ b/src/main/resources/job-scheduler-config.json
@@ -139,6 +139,10 @@
     {
       "destinationTableId": "DisplayNetworkReliability",
       "fileName": "queries/display-network-reliability.sql"
+    },
+    {
+      "destinationTableId": "TwitterUsageUnlicensed",
+      "fileName": "queries/twitter-usage-unlicensed.sql"
     }
   ]
 }
