Add widgets use rls stats to be aggregated

--- a/src/main/resources/job-scheduler-config.json
+++ b/src/main/resources/job-scheduler-config.json
@@ -27,6 +27,14 @@
       "fileName": "queries/player-module-stats.sql"
     },
     {
+      "destinationTableId": "ImageRLSStats",
+      "fileName": "queries/image-rls-stats.sql"
+    },
+    {
+      "destinationTableId": "VideoRLSStats",
+      "fileName": "queries/video-rls-stats.sql"
+    },
+    {
       "destinationTableId": "MultipleUnreliableV3StartsPlayerCount",
       "fileName": "queries/multiple-unreliable-v3-starts-player-count.sql"
     }
