Add widgets use RLS for folder stats for aggregation
- Setting this up separate from single file to track the configurations separately

--- a/src/main/resources/job-scheduler-config.json
+++ b/src/main/resources/job-scheduler-config.json
@@ -31,8 +31,16 @@
       "fileName": "queries/image-rls-stats.sql"
     },
     {
+      "destinationTableId": "ImageFolderRLSStats",
+      "fileName": "queries/image-folder-rls-stats.sql"
+    },
+    {
       "destinationTableId": "VideoRLSStats",
       "fileName": "queries/video-rls-stats.sql"
+    },
+    {
+      "destinationTableId": "VideoFolderRLSStats",
+      "fileName": "queries/video-folder-rls-stats.sql"
     },
     {
       "destinationTableId": "MultipleUnreliableV3StartsPlayerCount",
