Add missing fields from image_events table inserter

--- a/src/main/resources/table-inserter-config.json
+++ b/src/main/resources/table-inserter-config.json
@@ -256,6 +256,21 @@
           "name": "ts",
           "type": "TIMESTAMP",
           "nullable": false
+        },
+        {
+          "name": "version",
+          "type": "string",
+          "nullable": true
+        },
+        {
+          "name": "local_url",
+          "type": "string",
+          "nullable": true
+        },
+        {
+          "name": "configuration",
+          "type": "string",
+          "nullable": true
         }
       ]
     },
