schedule oAuth Token Provider stats

--- a/src/main/resources/job-scheduler-config.json
+++ b/src/main/resources/job-scheduler-config.json
@@ -69,6 +69,10 @@
     {
       "destinationTableId": "MultipleUnreliableV3StartsPlayerCount",
       "fileName": "queries/multiple-unreliable-v3-starts-player-count.sql"
+    },
+    {
+      "destinationTableId": "OAuthTokenProviderStats",
+      "fileName": "queries/oauth-token-provider-stats.sql"
     }
   ],
   "every24Hours": [
