schedule daily displays using HTML templates

--- a/src/main/resources/job-scheduler-config.json
+++ b/src/main/resources/job-scheduler-config.json
@@ -187,6 +187,10 @@
     {
       "destinationTableId": "ClientSideApplicationsTableStats",
       "fileName": "queries/client-side-applications-table-stats.sql"
+    },
+    {
+      "destinationTableId": "DisplaysUsingHtmlTemplates",
+      "fileName": "queries/displays-using-html-templates.sql"
     }
   ]
 }
