Use correct table name for apps

--- a/src/main/resources/table-inserter-config.json
+++ b/src/main/resources/table-inserter-config.json
@@ -356,7 +356,7 @@
     {
       "projectId": "client-side-events",
       "dataset": "Apps_Events",
-      "tableNamePrefix": "events",
+      "tableNamePrefix": "apps_events",
       "fields": [
         {
           "name": "event",
