--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,14 @@
-version: 2
+version: 2.1
+
+orbs:
+  gcp-cli: circleci/gcp-cli@3.1.1
 
 jobs:
-  "build":
+  build:
     docker: &DOCKERIMAGE
-      - image: jenkinsrise/cci-v2-docker-java8-gcloud:0.0.1
+      - image: cimg/openjdk:17.0.8
     working_directory: ~/client-side-events
-    
+
     steps:
       - checkout
       - restore_cache:
@@ -16,33 +19,59 @@ jobs:
           paths:
             - ~/.m2
           key: client-side-events-{{ checksum "pom.xml" }}
-          
-  "deploy_prod":
+
+  deploy_stage:
     docker: *DOCKERIMAGE
     working_directory: ~/client-side-events
     steps:
+      - gcp-cli/install:
+          version: latest
       - checkout
       - restore_cache:
           key: client-side-events-{{ checksum "pom.xml" }}
       - run:
           name: Authenticate with GCloud
-          command: |    
+          command: |
             echo $ACCT_AUTH | base64 --decode --ignore-garbage > ${HOME}/gcloud-service-key.json
-            sudo gcloud --quiet components update
             gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
-            gcloud config set project $PROJECT_ID  
+            gcloud config set project $PROJECT_ID
       - run:
           name: Deploy
           command: |
-            mvn clean
-            mvn appengine:deploy -DskipTests -Dapp.deploy.version=r$(echo -n $((CIRCLE_BUILD_NUM%10))) -Dapp.deploy.promote=true -Dapp.deploy.project=client-side-events        
-          
+            mvn clean package appengine:deploy -DskipTests -Dapp.deploy.version=stage -Dapp.deploy.projectId=client-side-events
+
+  deploy_prod:
+    docker: *DOCKERIMAGE
+    working_directory: ~/client-side-events
+    steps:
+      - gcp-cli/install:
+          version: latest
+      - checkout
+      - restore_cache:
+          key: client-side-events-{{ checksum "pom.xml" }}
+      - run:
+          name: Authenticate with GCloud
+          command: |
+            echo $ACCT_AUTH | base64 --decode --ignore-garbage > ${HOME}/gcloud-service-key.json
+            gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
+            gcloud config set project $PROJECT_ID
+      - run:
+          name: Deploy
+          command: |
+            mvn clean package appengine:deploy -DskipTests -Dapp.deploy.version=r$(echo -n $((CIRCLE_BUILD_NUM%10))) -Dapp.deploy.promote=true -Dapp.deploy.projectId=client-side-events
+
 workflows:
-  version: 2
   build_and_deploy:
     jobs:
-      - "build"
-      - "deploy_prod":
+      - build
+      - deploy_stage:
+          requires:
+            - build
+          filters:
+            branches:
+              ignore:
+                - master
+      - deploy_prod:
           requires:
             - build
           filters:
