--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,42 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-  <servlet>
-    <servlet-name>insertJobs</servlet-name>
-    <servlet-class>com.risevision.bigquery.InsertJobsHandler</servlet-class>
-  </servlet>
+	<servlet>
+		<servlet-name>insertJobs</servlet-name>
+		<servlet-class>com.risevision.bigquery.InsertJobsHandler</servlet-class>
+	</servlet>
 
-  <servlet>
-    <servlet-name>insertTables</servlet-name>
-    <servlet-class>com.risevision.bigquery.InsertTablesHandler</servlet-class>
-  </servlet>
+	<servlet>
+		<servlet-name>insertTables</servlet-name>
+		<servlet-class>com.risevision.bigquery.InsertTablesHandler</servlet-class>
+	</servlet>
 
-  <servlet-mapping>
-    <servlet-name>insertJobs</servlet-name>
-    <url-pattern>/insertJobs</url-pattern>
-  </servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>insertJobs</servlet-name>
+		<url-pattern>/insertJobs</url-pattern>
+	</servlet-mapping>
 
-  <servlet-mapping>
-    <servlet-name>insertTables</servlet-name>
-    <url-pattern>/insertTables</url-pattern>
-  </servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>insertTables</servlet-name>
+		<url-pattern>/insertTables</url-pattern>
+	</servlet-mapping>
 
-  <security-constraint>
-    <web-resource-collection>
-      <web-resource-name>admin</web-resource-name>
-      <url-pattern>/insertTables</url-pattern>
-    </web-resource-collection>
-    <auth-constraint>
-      <role-name>admin</role-name>
-    </auth-constraint>
-  </security-constraint>
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>admin</web-resource-name>
+			<url-pattern>/insertTables</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>admin</role-name>
+		</auth-constraint>
+	</security-constraint>
 
-  <security-constraint>
-    <web-resource-collection>
-      <web-resource-name>admin</web-resource-name>
-      <url-pattern>/insertJobs</url-pattern>
-    </web-resource-collection>
-    <auth-constraint>
-      <role-name>admin</role-name>
-    </auth-constraint>
-  </security-constraint>
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>admin</web-resource-name>
+			<url-pattern>/insertJobs</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>admin</role-name>
+		</auth-constraint>
+	</security-constraint>
+
+	<app-engine-apis>true</app-engine-apis>
 </web-app>
